--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-title:              해요빈 블로그
-bio:                'Minimal, one column jekyll theme.'
+title:              해요빈
+bio:                'Web Developer'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             utf-8
-url:                https://taylantatli.github.io/Moon/
+url:                https://bittestb0341.github.io/Moon/
 
 # Jekyll
 permalink:          /:title/
