--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site
 title:              해요빈
-bio:                'Web Developer'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+bio:                'Minimal, one column jekyll theme.'
+description:        "Web Developer"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             utf-8
-url:                https://taylantatli.github.io/Moon/
+url:                https://taylantatli.github.io/moon/
 
 # Jekyll
 permalink:          /:title/
