--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site
 title:              해요빈
 bio:                'Minimal, one column jekyll theme.'
-description:        "Web Developer"
+description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
-locale:             utf-8
-url:                https://taylantatli.github.io/moon/
+locale:             en_US
+url:                https://taylantatli.github.io/Moon
 
 # Jekyll
 permalink:          /:title/
@@ -40,7 +40,7 @@ disqus_shortname:   taylantatli
 #email:
 twitter:            username
 facebook:           username
-github-url:         https://bittestb0341.github.io/
+github-url:         username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
