--- a/_config.yml
+++ b/_config.yml
@@ -37,12 +37,12 @@ disqus_shortname:   taylantatli
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:              nhb4181@gmail.com
 twitter:            username
-facebook:           username
+facebook:           nhb2134
 github-url:         bittestb0341
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           nhb2134
 #xing:              username
 instagram:          sun._.empty
 #lastfm:            username
