--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 email:              nhb4181@gmail.com
-twitter:            username
-facebook:           nhb2134
+#twitter:            username
+#facebook:           nhb2134
 github-url:         bittestb0341
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:           nhb2134
+#linkedin:           nhb2134
 #xing:              username
 instagram:          sun._.empty
 #lastfm:            username
