--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              해요빈
 bio:                'Web Developer'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        "Web Developer"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
