--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://taylantatli.github.io/Moon
+url:                https://taylantatli.github.io/Moon  # the base hostname & protocol for your site
+baseurl:            /bittestb0341 # the subpath of your site, e.g. /blog
+
 
 # Jekyll
 permalink:          /:title/
