--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   bittestb0341    #taylantatli 기존 개발자
 
 # Social
 # if you don't have any of social below, comment the line.
