--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,3 +2,9 @@
 
 - title: Projects
   url: /projects/
+- title: Java
+  url: /java/
+- title: Python
+  url: /python/
+- title: Html/css
+  url: /htmlcss/
