--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,6 @@
 
 - title: Projects
   url: /projects/
-- title: Java
-  url: /java/
-- title: Python
-  url: /python/
-- title: Html/css
-  url: /htmlcss/
+- title: Study
+  url: /study/
+
